H7 - Se cambio el mensaje final de error.

--- a/frontend/src/app/components/formulario-carga-medico/formulario-carga-medico.component.html
+++ b/frontend/src/app/components/formulario-carga-medico/formulario-carga-medico.component.html
@@ -194,10 +194,10 @@
 							<h4 class="modal-title">Sorry!</h4>	
 						</div>
 						<div class="modal-body">
-							<p class="text-center">No se pudo cargar el Medico, por X motivo.</p>
+							<p class="text-center">Hubo un error y no se pudo cargar el Medico.</p>
 						</div>
 						<div class="modal-footer">
-							<button class="btn btn-danger btn-block" data-dismiss="modal" ng-click="reset()">OK</button>
+							<button class="btn btn-danger btn-block" data-dismiss="modal" (click)="reset()">OK</button>
 						</div>
 					</div>
 				</div>
