--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -50,6 +50,11 @@
             <a class="nav-link" routerLink="/" routerLinkActive="active"> {{ name }} </a>
           </li> 
       </div>
+      <div>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/perfil" routerLinkActive="active">Cargar Cartilla</a>
+        </li>
+      </div>
     </ul>    
     </div>
   </nav>
