Se arreglo el nav bar de perfil

--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -47,13 +47,8 @@
       </div>
         <div>
           <li class="nav-item" *ngIf="isUser == true">
-            <a class="nav-link" routerLink="/" routerLinkActive="active"> {{ name }} </a>
+            <a class="nav-link" routerLink="/perfil" routerLinkActive="active"> {{ name }} </a>
           </li> 
-      </div>
-      <div>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/perfil" routerLinkActive="active">Cargar Cartilla</a>
-        </li>
       </div>
     </ul>    
     </div>
