Modificacion del estilo del Home

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<body>   
+   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -6,13 +7,25 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/imagenes/med1.jpg" class="d-block w-100" alt="...">
+          <img src="assets/imagenes/med1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          <h2 class="display-4">OSME piensa en vos</h2>
+          <p class="lead">Ahorra tiempo en la gestión de ordenes</p>
+          </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item"> 
         <img src="assets/imagenes/med2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          <h2 class="display-4" style="color:#008080">Consultá Online las Cartillas</h2>
+          <p class="lead" style="color:#008080">Te ofrecemos una amplia lista de medicamentos, farmacias, hospitales y médicos</p>
+          </div>
       </div>
       <div class="carousel-item">
         <img src="assets/imagenes/med3.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          <h2 class="display-4" style="color:#800000" >Está llegando OSME móvil</h2>
+          <p class="lead" style="color:#800000">Una app para tener tu obra social siempre a mano</p>
+          </div>
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -24,3 +37,4 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+</body>
